# flocking_sdl

./: .gitignore  .travis.yml  CMakeLists.txt  README.org
data/: CMakeLists.txt  ant_default.json  ant_explorer.json  ant_soldier.json  ant_worker.json  default_ant.json  event_sample.json  event_test.json  schema_ant.json  schema_events.json
src/: .gitignore  CMakeLists.txt  FlockingConfig.h.in  main.cpp
src/entity/: CMakeLists.txt  entity.cpp  entity.h
src/entity/ant/: CMakeLists.txt  ant.cpp  ant.h
src/entity/food/: CMakeLists.txt  food.cpp  food.h
src/jsoncpp/: CMakeLists.txt
src/ui/: CMakeLists.txt
src/ui/input/: CMakeLists.txt  json_event.cpp  json_event.h  user_input.cpp  user_input.h
src/ui/window/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/window/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/world/: CMakeLists.txt  kdtree.cpp  kdtree.h  world.cpp  world.h
test/: CMakeLists.txt  main_tests.cpp  test_entity.cpp  test_events.cpp  test_kdtree.cpp  test_world.cpp
